# anisongDB-backend

./: .docker.env  .env  .gitignore  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  README.md  convertJSON.py  docker-compose.yml  pyproject.toml  requirements.txt
app/: get_search_result.py  io_classes.py  main.py  search_database.py  sql_calls.py  utils.py
app/tests/: test_sql_calls.py  test_utils.py
misc_scripts/: checkDBValidity.py  convert_to_SQL.py  fuseArtistNames.py  groupMember.py  splitting.py  updateExpandDataAuto.py  utils.py
process_data_scripts/: checkDBValidity.py  convert_to_SQL.py  fuseArtistNames.py  groupMember.py  splitting.py  updateExpandDataAuto.py  updateLogs.txt  utils.py
